--- a/OnTableView/Info.plist
+++ b/OnTableView/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSRemindersUsageDescription</key>
+	<string>can access your reminder</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>can access your calender</string>
+	<key>NSContactsUsageDescription</key>
+	<string>can access your contacts </string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
